fixed input placeholder text bug on safari

--- a/cards/src/styles/CardFooter.css
+++ b/cards/src/styles/CardFooter.css
@@ -1,10 +1,11 @@
 .CardFooter {
   border-top: 1px solid #efefef;
+  font-weight: 300;
   color: #999999;
   margin: 20px;
-  padding: 10px 3px 10px;
-  height: 65px;
-  line-height: 65px;
+  padding: 8px 3px 10px;
+  height: 45px;
+  line-height: 45px;
 }
 
 .AddComment {
@@ -14,6 +15,7 @@
 .AddComment .new-comment {
   border: 0;
   height: 20px;
+  line-height: 20px;
 }
 
 .AddComment .new-comment:focus {
