--- a/cards/src/styles/Search.css
+++ b/cards/src/styles/Search.css
@@ -5,7 +5,7 @@
 
 .Search .search-box-input {
   border: 1px solid #e7e7e7;
-  margin-top: 0;
+  line-height: 20px;
   border-radius: 3px;
   outline: none;
   text-align: center;
